--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="C:\Users\Thimo\Desktop\projecten\Onepage\IMGS\me.png" alt="img">
+          <img href="https://i.imgur.com/IE4Iffe.png">
         </div>
       </div>
       <div class="col-right">
