--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img href="https://www.i.imgur.com/IE4Iffe.png">
+          <img src="https://i.imgur.com/IE4Iffe.png">
         </div>
       </div>
       <div class="col-right">
