--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>Thimo</title>
 </head>
 <body>
   <!-- Header -->
@@ -48,13 +48,13 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+        <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend gesteente na of de afstanden overwaard nu. Ongunstige schoonheid karrijders af nu</p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
           <h2>Web Designer</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
+          <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend</p>
         </div>
         <div class="service-item">
           <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/79069893&color=%23fb0000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/thimo-van-der-horn" title="Thimo Van der Horn" target="_blank" style="color: #cccccc; text-decoration: none;">Thimo Van der Horn</a> · <a href="https://soundcloud.com/thimo-van-der-horn/the-8th-sea-serenity" title="The 8th Sea Serenity" target="_blank" style="color: #cccccc; text-decoration: none;">The 8th Sea Serenity</a></div>
@@ -69,7 +69,8 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
           <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
+          <p>
+            Hij aan bij aardige terrein voldoen terwijl leelijk. In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs.</p>
         </div>
       </div>
     </div>
@@ -86,8 +87,9 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h2>Life is Love</h2>
+            <p>
+              Hij aan bij aardige terrein voldoen terwijl leelijk. In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs. De op eigendom verloren inkrimpt ad gestookt elkander. Stadje enorme ruimer francs den geheel een dus. Deele terug welks voort te er langs na om later.</p>
           </div>
           <div class="project-img">
             <img src="./IMGS/me4.jpg" alt="img">
@@ -97,7 +99,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>Diving is Life</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <p>Vernielen voorkomen verbouwen evenwicht met voldoende hanteeren dan. Ook tin millioen loopbaan hij nadering zit behoefte meenemen. Al is laten ijzer ze zelve weren spijt plant. Massa om er wegen vrouw ad wonde onder. Er konden om moeten treden ad dragen na. Uit far maleische verzameld jaarlijks voornemen voldoende.</p>
           </div>
           <div class="project-img">
             <img src="./IMGS/img2.jpg" alt="img">
@@ -106,7 +108,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
-            <h2>Coding is Love</h2>
+            <h2>love is Love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
@@ -123,14 +125,7 @@
             <img src="./IMGS/me2.jpg" alt="img">
           </div>
         </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./IMGS/me3.jpg" alt="img">
+       
           </div>
         </div>
       </div>
@@ -143,14 +138,15 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="ThimoHessel.github.io/IMGS/me.png">
+          <img src="C:\Users\Thimo\Desktop\projecten\Onepage\IMGS\me.png" alt="img">
         </div>
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <p>Dik van welk bouw dan toch dus. En de willen al in cijfer scheen. En brandstof zuidgrens al plaatsing antwerpen nu om. Zuidgrens ik is honderden verdiende. Die een eromheen failliet weg talrijke mijnbouw. Gebergten ad maleische wassching schaarsch wellesley plaatsing op af. Ook primitieve belangrijk verbazende van onvermoeid meesleuren dweepzieke mei. Mijnwerker noodlottig verzamelen ontginning nu ik smeltovens. 
+        </p>
+        <a href="https://www.docdroid.net/S4UBvxw/cv-thimo-van-der-horn-pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
@@ -195,7 +191,7 @@
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
+          <a href="https://www.facebook.com/thimo.vanderhorn/"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
