--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="C:\Users\Thimo\Desktop\projecten\Onepage\IMGS\me.png" alt="img">
+          <img src="ThimoHessel.github.io/IMGS/me.png" alt="img">
         </div>
       </div>
       <div class="col-right">
