--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Thimo</title>
+  <link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2020-08-07/8316708da28b06d5aeea75144e2163a1.ico.png">
 </head>
 <body>
   <!-- Header -->
