--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Thimo</title>
- <link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2020-08-07/dffcdc88e6aa13523488b083a88d98af.ico.png">
+ <link rel="icon" href="https://i.imgur.com/fNIoT4I.png">
 </head>
 <body>
   <!-- Header -->
