--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
-            <h2>love is Love</h2>
+            <h2>Life is Love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
