--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Thimo</title>
+  <link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2020-08-07/8316708da28b06d5aeea75144e2163a1.ico.png">
 </head>
 <body>
   <!-- Header -->
@@ -112,7 +113,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./IMGS/me1.jpg" alt="img">
+            <iframe width="600" height="400" src="https://www.youtube.com/embed/l37UgBixLms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="project-item">
@@ -191,16 +192,16 @@
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://www.facebook.com/thimo.vanderhorn/"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
+          <a href="https://www.facebook.com/thimo.vanderhorn/"><img src="https://i.imgur.com/5y8fpVN.png"/></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
+          <a href="https://open.spotify.com/user/1119442594"><img src="https://i.imgur.com/qd9XfRW.png"/></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"/></a>
+          <a href="https://www.youtube.com/channel/UC2lX6wQyu1GHhebloaPUwsw/featured?view_as=subscriber"><img src="https://i.imgur.com/rajl02N.png"/></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png"/></a>
+          <a href="https://paypal.me/ThimovanderHorn?locale.x=nl_NL"><img src="https://i.imgur.com/v2LVfEN.png"/></a>
         </div>
       </div>
       <p>Copyright © 2020 van der Horn. All rights reserved</p>
