--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/79069893&color=%23fb0000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/thimo-van-der-horn" title="Thimo Van der Horn" target="_blank" style="color: #cccccc; text-decoration: none;">Thimo Van der Horn</a> · <a href="https://soundcloud.com/thimo-van-der-horn/the-8th-sea-serenity" title="The 8th Sea Serenity" target="_blank" style="color: #cccccc; text-decoration: none;">The 8th Sea Serenity</a></div>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="./IMGS/padi.png"/></div>
+          <div class="icon"><img src="https://i.imgur.com/LnyH8VP.png"/></div>
           <h2>PADI</h2>
           <p>Master Scuba Diver Trainer</p><br>
           <p>Emergency First Respond Instructor (EHBO)</p><br>
