--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/color/48/000000/adobe-photoshop.png"/></div>
           <h2>Web Designer</h2>
           <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend</p>
         </div>
@@ -71,8 +71,8 @@
           <p>Over a 100 Certifications</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
-          <h2>Web Design</h2>
+          <div class="icon"><img src="https://img.icons8.com/color/48/000000/python.png"/></div>
+          <h2>Python</h2>
           <p>
             Hij aan bij aardige terrein voldoen terwijl leelijk. In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs.</p>
         </div>
@@ -116,7 +116,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/l37UgBixLms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="600" height="400" src="https://www.youtube.com/embed/l37UgBixLms" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="project-item">
@@ -142,7 +142,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="ThimoHessel.github.io/IMGS/me.png" alt="img">
+          <img src="https://i.imgur.com/RDtZsRc.png" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -162,14 +162,15 @@
       <div><h1 class="section-title">Contact <span>info</span></h1></div>
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/color/48/000000/whatsapp.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/ios/50/000000/ringing-phone.png"/></div>
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+31 6 82 62 37 60</h2>
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/color/48/000000/gmail-login.png"/></div>
           <div class="contact-info">
             <h1>Email</h1>
             <h2>thimovanderhorn@hotmail.com</h2><br>
@@ -177,7 +178,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
+          <div class="icon"><img src="https://img.icons8.com/color/48/000000/lighthouse.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
             <h2>Texel, Den Burg<br> Holland</h2>
