--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <li>           </li> <li><img src="https://i.imgur.com/6M3u9K2.png"></li>
           </ul>
         </div>
       </div>
@@ -116,7 +117,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <iframe width="600" height="400" src="https://www.youtube.com/embed/l37UgBixLms" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <img src="https://i.imgur.com/zwuoaGl.png" alt="KING VILHO">
           </div>
         </div>
         <div class="project-item">
