--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#projects" data-after="Projects">Projects</a></li>
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
-            <li>           </li> <li><img src="https://i.imgur.com/6M3u9K2.png"></li>
+            <li><img src="https://i.imgur.com/f3yPYw2.png"></li>
           </ul>
         </div>
       </div>
