--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
-              <h2>Your Complete Web Solution</h2>
+              <h2>" an Asset to your Team. "</h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="https://www.facebook.com/thimo.vanderhorn/"><img src="https://i.imgur.com/5y8fpVN.png"/></a>
