--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="https://i.imgur.com/zwuoaGl.png" alt="KING VILHO">
+            <img src="https://i.imgur.com/jQcZa9Q.jpg" alt="KING VILHO">
           </div>
         </div>
         <div class="project-item">
