--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h2>Front End Developer</h2>
         <p>Dik van welk bouw dan toch dus. En de willen al in cijfer scheen. En brandstof zuidgrens al plaatsing antwerpen nu om. Zuidgrens ik is honderden verdiende. Die een eromheen failliet weg talrijke mijnbouw. Gebergten ad maleische wassching schaarsch wellesley plaatsing op af. Ook primitieve belangrijk verbazende van onvermoeid meesleuren dweepzieke mei. Mijnwerker noodlottig verzamelen ontginning nu ik smeltovens. 
         </p>
-        <a href="https://www.docdroid.net/S4UBvxw/cv-thimo-van-der-horn-pdf" class="cta">Download Resume</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
