--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Thimo</title>
-
-
- <link rel="icon" href="https://i.imgur.com/fNIoT4I.png">
+  <link rel="icon" href="https://i.imgur.com/fNIoT4I.png">
 
 </head>
 <body>
-  <!-- Header -->
+  <!-- Heeder -->
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
@@ -35,7 +33,7 @@
   <!-- End Header -->
 
 
-  <!-- Hero Section  -->
+  <!-- Thimo Section  -->
   <section id="hero">
     <div class="hero container">
       <div>
@@ -48,7 +46,7 @@
   </section>
   <!-- End Hero Section  -->
 
-  <!-- Service Section -->
+  <!-- Service Secction -->
   <section id="services">
     <div class="services container">
       <div class="service-top">
@@ -80,7 +78,7 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
+  <!-- Eind Service Section -->
 
   <!-- Projects Section -->
   <section id="projects">
@@ -136,7 +134,7 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
+  <!-- Eind projects Section -->
 
   <!-- About Section -->
   <section id="about">
