--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
+        <h1 class="section-title1">Serv<span>i</span>ces</h1>
         <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend gesteente na of de afstanden overwaard nu. Ongunstige schoonheid karrijders af nu</p>
       </div>
       <div class="service-bottom">
@@ -180,7 +180,7 @@
           <div class="icon"><img src="https://img.icons8.com/color/48/000000/lighthouse.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Texel, Den Burg<br> Holland</h2>
+            <h2> Texel, Den Burg<br> Holland</h2>
           </div>
         </div>
       </div>
