--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <section id="services">
     <div class="services container">
       <div class="service-top">
-        <h1 class="section-title1">Serv<span>i</span>ces</h1>
+        <h1 class="section-title">Serv<span>i</span>ces</h1>
         <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend gesteente na of de afstanden overwaard nu. Ongunstige schoonheid karrijders af nu</p>
       </div>
       <div class="service-bottom">
@@ -145,7 +145,7 @@
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
+        <h1 class="section-title1">About <span>me</span></h1>
         <h2>Front End Developer</h2>
         <p>Dik van welk bouw dan toch dus. En de willen al in cijfer scheen. En brandstof zuidgrens al plaatsing antwerpen nu om. Zuidgrens ik is honderden verdiende. Die een eromheen failliet weg talrijke mijnbouw. Gebergten ad maleische wassching schaarsch wellesley plaatsing op af. Ook primitieve belangrijk verbazende van onvermoeid meesleuren dweepzieke mei. Mijnwerker noodlottig verzamelen ontginning nu ik smeltovens. 
         </p>
