--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!-- Footer -->
   <section id="footer">
     <div class="footer container">
-              <h2>" Asset to your Team. "</h2>
+              <h2>" Menselijk kapitaal "</h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="https://www.facebook.com/thimo.vanderhorn/"><img src="https://i.imgur.com/5y8fpVN.png"/></a>
