--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="icon"><img src="https://img.icons8.com/color/48/000000/lighthouse.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2> Texel, Den Burg<br> Holland</h2>
+            <h2> Helsinki, Lauttasaari<br> Finland</h2>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
           <a href="https://paypal.me/ThimovanderHorn?locale.x=nl_NL"><img src="https://i.imgur.com/v2LVfEN.png"/></a>
         </div>
       </div>
-      <p>Copyright © 2020 van der Horn. All rights reserved</p>
+      <p>Copyright © 2021 van der Horn. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
