--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="icon"><img src="https://img.icons8.com/wired/64/000000/water-transportation.png"/></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2> Helsinki, Lauttasaari<br> Finland</h2>
+            <h2> Helsinki, Puistokaari 21 B 12<br> Finland</h2>
           </div>
         </div>
       </div>
