--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- End Header -->
 
 
-  <!-- Thimo Section  -->
+  <!-- Hero -->
   <section id="hero">
     <div class="hero container">
       <div>
