--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <p>Over a 100 Certifications</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://i.imgur.com/BMVqPDY.gif"/></div>
+          <div class="icon"><img src="https://i.imgur.com/jvaWw4a.gif"/></div>
           <h2>Python</h2>
           <p>
             Hij aan bij aardige terrein voldoen terwijl leelijk. In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs.</p>
