--- a/index.html
+++ b/index.html
@@ -57,23 +57,25 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/color/48/000000/adobe-photoshop.png"/></div>
           <h2>Web Designer</h2>
-          <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre. Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend</p>
+          <p>Wordt of ad begin varen en. Deel is ik alle te geen. Nu wijk zout te ze is acre.</p>
+          <p>Andere ceylon om te kriang lieden. Monopolie bezwarend stroomend</p>
+        </div>
+        <div class="service-item"> <div class="icon"><img src="https://cdn-icons-png.flaticon.com/512/1664/1664316.png"></div>
+        <h2>SQL</h2>
+        <p>Wordt of ad begin varen en. Deel is ik alle te geen.</p>
+        <p>Monopolie bezwarend stroomend gesteente na of de afstanden overwaard nu.</p>
         </div>
         <div class="service-item">
-          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/79069893&color=%23fb0000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/thimo-van-der-horn" title="Thimo Van der Horn" target="_blank" style="color: #cccccc; text-decoration: none;">Thimo Van der Horn</a> · <a href="https://soundcloud.com/thimo-van-der-horn/the-8th-sea-serenity" title="The 8th Sea Serenity" target="_blank" style="color: #cccccc; text-decoration: none;">The 8th Sea Serenity</a></div>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://i.imgur.com/LnyH8VP.png"/></div>
+          <div class="icon"><img src="https://i.imgur.com/LnyH8VP.png"></div>
           <h2>PADI</h2>
           <p>Master Scuba Diver Trainer</p><br>
           <p>Emergency First Respond Instructor (EHBO)</p><br>
           <p>Over a 100 Certifications</p>
         </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png"/></div>
+        <div class="service-item"><div class="icon"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png"/></div>
           <h2>Python</h2>
-          <p>
-            Hij aan bij aardige terrein voldoen terwijl leelijk. In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs.</p>
+          <p>Hij aan bij aardige terrein voldoen terwijl leelijk.</p>
+          <p> In te af kamarat hoogere gedaald bestaat blanken en. Groot de onder of zelfs.</p>
         </div>
       </div>
     </div>
